--- a/index.html
+++ b/index.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navBar">
+            <ul>
+                <li><a href="#"><i class='bx bxl-apple' ></i></a></li>
+                <li><a href="#">Store</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">iPad</a></li>
+                <li><a href="#">iPhone</a></li>
+                <li><a href="#">Watch</a></li>
+                <li><a href="#">Vision</a></li>
+                <li><a href="#">AirPods</a></li>
+                <li><a href="#">TV & Home</a></li>
+                <li><a href="#">Entertainment</a></li>
+                <li><a href="#">Accessories</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#"><i class='bx bx-search' undefined ></i></a></li>
+                <li><a href="#"><i class='bx bx-shopping-bag'></i></a></li>
+              </ul>
+        </nav>
+        <section class="heroSection"></section>
+    </header>
     <script src="js/script.js"></script>
 </body>
 </html>
