Refactor: Html for navbar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,13 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav class="navBar">
-            <ul>
-                <li><a href="#"><i class='bx bxl-apple' ></i></a></li>
+            <div class="container">
+            <li><a href="#" class="logo"><i class='bx bxl-apple navIcons'></i></a></li>
+            <ul class="nav-links">
                 <li><a href="#">Store</a></li>
                 <li><a href="#">Mac</a></li>
                 <li><a href="#">iPad</a></li>
@@ -23,12 +26,19 @@
                 <li><a href="#">Entertainment</a></li>
                 <li><a href="#">Accessories</a></li>
                 <li><a href="#">Support</a></li>
-                <li><a href="#"><i class='bx bx-search' undefined ></i></a></li>
-                <li><a href="#"><i class='bx bx-shopping-bag'></i></a></li>
-              </ul>
+            </ul>
+            <div class="hamburger">
+                <li><a href="#" class="icon search"><i class='bx bx-search navIcons'></i></a></li>
+                <li><a href="#" class="icon shopping"><i class='bx bx-shopping-bag navIcons'></i></a></li>
+                <i class='bx bx-menu'></i>
+              </div>              
+        </div>
         </nav>
-        <section class="heroSection"></section>
+        <section class="heroSection">
+            <img src="" alt="">
+        </section>
     </header>
     <script src="js/script.js"></script>
 </body>
+
 </html>
