Organize all images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <section class="heroSection">
-            <img src="" alt="">
+            <img src="assets/" alt="">
         </section>
     </header>
     <script src="js/script.js"></script>
