Feat: some section

--- a/index.html
+++ b/index.html
@@ -35,9 +35,30 @@
             </div>
         </nav>
         <section class="heroSection">
-            <img src="assets/" alt="">
-        </section>
+            <div class="heroContent">
+                <h3>iPhone 16 Pro</h3>
+                <p>Hello, Apple Intelligence</p>
+                <div class="heroContentButtons">
+                    <button>Learn more</button>
+                    <button>Buy</button>
+                </div>
+            </div>
+            <img src="assets/Hero Section/heroiphone16proavailfnf0f9x70jiymediumtall.jpg" alt="">
+        </section>        
     </header>
+    <main>
+        <section class="sectionTwo">
+            <div class="twoContent">
+                <h3>iPhone 16 Pro</h3>
+                <p>Hello, Apple Intelligence</p>
+                <div class="twoContentButtons">
+                    <button>Learn more</button>
+                    <button>Buy</button>
+                </div>
+            </div>
+            <img src="assets/Section 2/heroiphone16availeuwzls69bteamediumtall.jpg" alt="">
+        </section>  
+    </main>
     <script src="js/script.js"></script>
 </body>
 
