--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <img src="assets/Hero Section/heroiphone16proavailfnf0f9x70jiymediumtall.jpg" alt="">
-        </section>        
+        </section>
     </header>
     <main>
         <section class="sectionTwo">
@@ -57,7 +57,19 @@
                 </div>
             </div>
             <img src="assets/Section 2/heroiphone16availeuwzls69bteamediumtall.jpg" alt="">
-        </section>  
+        </section>
+        <section class="sectionThree">
+            <div class="threeContent">
+                <h3>iPhone 16 Pro</h3>
+                <p>Hello, Apple Intelligence</p>
+                <div class="threeContentButtons">
+                    <button>Learn more</button>
+                    <button>Buy</button>
+                </div>
+            </div>
+            <img src="assets/Section 3/heroapplewatchseries10availlteesu66gaw6dcilarge.jpg" alt="">
+        </section>
+
     </main>
     <script src="js/script.js"></script>
 </body>
