--- a/index.html
+++ b/index.html
@@ -69,7 +69,80 @@
             </div>
             <img src="assets/Section 3/heroapplewatchseries10availlteesu66gaw6dcilarge.jpg" alt="">
         </section>
-
+        <section class="sectionProducts">
+            <div class="product-section-one">
+                <div class="product-card">
+                    <img src="assets/Products/Large/1.jpg" alt="">
+                    <div class="product-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem, ipsum dolor.</p>
+                        <div class="product-buttons">
+                            <button>Learn more</button>
+                            <button>Buy</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="assets/Products/Large/2.jpg" alt="">
+                    <div class="product-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem, ipsum dolor.</p>
+                        <div class="product-buttons">
+                            <button>Learn more</button>
+                            <button>Buy</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-section-two">
+                <div class="product-card">
+                    <img src="assets/Products/Large/3.jpg" alt="">
+                    <div class="product-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem, ipsum dolor.</p>
+                        <div class="product-buttons">
+                            <button>Learn more</button>
+                            <button>Apply now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="assets/Products/Large/4.jpg" alt="">
+                    <div class="product-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem, ipsum dolor.</p>
+                        <div class="product-buttons">
+                            <button>Learn more</button>
+                            <button>Apply now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="product-section-three">
+                <div class="product-card">
+                    <img src="assets/Products/Large/5.jpg" alt="">
+                    <div class="product-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem, ipsum dolor.</p>
+                        <div class="product-buttons">
+                            <button>Get your estimate</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <img src="assets/Products/Large/6.jpg" alt="">
+                    <div class="product-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem, ipsum dolor.</p>
+                        <div class="product-buttons">
+                            <button>Learn more</button>
+                            <button>Apply now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
     <script src="js/script.js"></script>
 </body>
