--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -146,42 +147,210 @@
 
         <section class="swiper-container">
             <div class="swiper mySwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="assets/Slider/1250x703 (1).jpg" alt="Product 1">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (1).jpg" alt="Product 1">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (2).jpg" alt="Product 2">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (3).jpg" alt="Product 3">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (4).jpg" alt="Product 4">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (5).jpg" alt="Product 5">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (6).jpg" alt="Product 6">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (7).jpg" alt="Product 7">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (8).jpg" alt="Product 8">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="assets/Slider/1250x703 (9).jpg" alt="Product 9">
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                  <img src="assets/Slider/1250x703 (2).jpg" alt="Product 2">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/Slider/1250x703 (3).jpg" alt="Product 3">
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/Slider/1250x703 (4).jpg" alt="Product 4">
-                </div>
-                <div class="swiper-slide">
-                    <img src="assets/Slider/1250x703 (5).jpg" alt="Product 5">
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="assets/Slider/1250x703 (6).jpg" alt="Product 6">
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="assets/Slider/1250x703 (7).jpg" alt="Product 7">
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="assets/Slider/1250x703 (8).jpg" alt="Product 8">
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="assets/Slider/1250x703 (9).jpg" alt="Product 9">
-                  </div>
-              </div>
-              <div class="swiper-pagination"></div>
+                <div class="swiper-pagination"></div>
             </div>
-          </section>
-          
-          
+        </section>
+
+        <section>
+            <div class="slider-container">
+                <div class="slider">
+                    <img src="assets/Slider 2/1.jpg" class="slider-item" alt="Image 1">
+                    <img src="assets/Slider 2/2.jpg" class="slider-item" alt="Image 2">
+                    <img src="assets/Slider 2/3.jpg" class="slider-item" alt="Image 3">
+                    <img src="assets/Slider 2/4.jpg" class="slider-item" alt="Image 4">
+                </div>
+                <button class="play-btn" id="playButton">
+                    <span id="playIcon">▶</span>
+                </button>
+            </div>
+
+        </section>
+
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="upper-text-container">
+                <p>
+                    1. Trade In: Trade‑in values vary. iPhone 11 and iPhone 11 Pro
+                    promotional pricing is after trade‑in of iPhone 8 Plus and iPhone X
+                    in good condition. Additional trade‑in values require purchase of a
+                    new iPhone, subject to availability and limits. Must be at least 18.
+                    Apple or its trade-in partners reserve the right to refuse or limit
+                    any Trade In transaction for any reason. In‑store trade‑in requires
+                    presentation of a valid, government-issued photo ID (local law may
+                    require saving this information). Sales tax may be assessed on full
+                    value of new iPhone. Additional terms from Apple or Apple’s trade-in
+                    partners may apply. Monthly pricing: Available to qualified
+                    customers and requires 0% APR, 24-month installment loan with
+                    Citizens One or Apple Card Monthly Installments and iPhone
+                    activation with AT&T, Sprint, T-Mobile, or Verizon. Taxes and
+                    shipping not included. Additional Apple Card Monthly Installments
+                    terms are in the
+                    <a href="https://www.goldmansachs.com/terms-and-conditions/Apple-Card-Customer-Agreement.pdf"
+                        target="_blank">
+                        Customer Agreement</a>. Additional iPhone Payments terms are
+                    <a href="https://www.apple.com/legal/sales-support/iphoneinstallments_us/">
+                        here</a>.
+                </p>
+                <p>
+                    2. Subscription required.<br /><br />
+                    Magic Keyboard sold separately.<br /><br />
+                    Apple TV+ is $4.99/month after free trial. One subscription per
+                    Family Sharing group. Offer good for 3 months after eligible device
+                    activation. Plan automatically renews until cancelled. Restrictions
+                    and other <a href="https://www.apple.com/promo/">terms </a> apply.
+                </p>
+            </div>
+            <div class="footer-links-wrapper row">
+                <div class="links-wrapper-1 col-sm-12 col-md">
+                    <h3 id="one">Shop and Learn</h3>
+                    <ul>
+                        <li><a href="#">Mac</a></li>
+                        <li><a href="#">iPad</a></li>
+                        <li><a href="#">iPhone</a></li>
+                        <li><a href="#">Watch</a></li>
+                        <li><a href="#">TV</a></li>
+                        <li><a href="#">Music</a></li>
+                        <li><a href="#">AirPods</a></li>
+                        <li><a href="#">HomePod</a></li>
+                        <li><a href="#">iPod touch</a></li>
+                        <li><a href="#">Accessories</a></li>
+                        <li><a href="#">Gift Cards</a></li>
+                    </ul>
+                </div>
+                <div class="links-wrapper-2 col-sm-12 col-md">
+                    <h3 id="two">Services</h3>
+                    <ul>
+                        <li><a href="#">Apple Music</a></li>
+                        <li><a href="#">Apple News+</a></li>
+                        <li><a href="#">Apple TV+</a></li>
+                        <li><a href="#">Apple Arcade</a></li>
+                        <li><a href="#">Apple Card</a></li>
+                        <li><a href="#">iCloud</a></li>
+                    </ul>
+                    <h3>Account</h3>
+                    <ul>
+                        <li><a href="#">Manage Your Apple ID</a></li>
+                        <li><a href="#">Apple Store Account</a></li>
+                        <li><a href="#">iCloud.com</a></li>
+                    </ul>
+                </div>
+                <div class="links-wrapper-3 col-sm-12 col-md">
+                    <h3>Apple Store</h3>
+                    <ul>
+                        <li><a href="#">Find a Store</a></li>
+                        <li><a href="#">Genius Bar</a></li>
+                        <li><a href="#">Today at Apple</a></li>
+                        <li><a href="#">Apple Camp</a></li>
+                        <li><a href="#">Field Trip</a></li>
+                        <li><a href="#">Apple Store App</a></li>
+                        <li><a href="#">Refurbished and Clearance</a></li>
+                        <li><a href="#">Financing</a></li>
+                        <li><a href="#">Apple Trade In</a></li>
+                        <li><a href="#">Order Status</a></li>
+                        <li><a href="#">Shopping Help</a></li>
+                    </ul>
+                </div>
+                <div class="links-wrapper-4 col-sm-12 col-md">
+                    <h3>For Business</h3>
+                    <ul>
+                        <li><a href="#">Apple and Business</a></li>
+                        <li><a href="#">Shop for Business</a></li>
+                    </ul>
+                    <h3>For Education</h3>
+                    <ul>
+                        <li><a href="#">Apple and Education</a></li>
+                        <li><a href="#">Shop for College</a></li>
+                    </ul>
+                    <h3>For Healthcare</h3>
+                    <ul>
+                        <li><a href="#">Manage Your Apple ID</a></li>
+                        <li><a href="#">Apple Store Account</a></li>
+                        <li><a href="#">iCloud.com</a></li>
+                    </ul>
+                    <h3>For Government</h3>
+                    <ul>
+                        <li><a href="#">Apple and Education</a></li>
+                        <li><a href="#">Shop for College</a></li>
+                    </ul>
+                </div>
+                <div class="links-wrapper-5 col-sm-12 col-md">
+                    <h3>Apple Values</h3>
+                    <ul>
+                        <li><a href="#">Find a Store</a></li>
+                        <li><a href="#">Genius Bar</a></li>
+                        <li><a href="#">Today at Apple</a></li>
+                        <li><a href="#">Apple Camp</a></li>
+                        <li><a href="#">Field Trip</a></li>
+                        <li><a href="#">Apple Store App</a></li>
+                    </ul>
+                    <h3>About Apple</h3>
+                    <ul>
+                        <li><a href="#">Find a Store</a></li>
+                        <li><a href="#">Genius Bar</a></li>
+                        <li><a href="#">Today at Apple</a></li>
+                        <li><a href="#">Apple Camp</a></li>
+                        <li><a href="#">Field Trip</a></li>
+                        <li><a href="#">Apple Store App</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="my-apple-wrapper">
+                More ways to shop: <a href="#">Find an Apple Store</a> or
+                <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.
+            </div>
+            <div class="copyright-wrapper row">
+                <div class="copyright col-sm-12 order-2 col-md-8 order-md-1 col-lg-4 order-lg-1">
+                    Copyright &copy; 2020 Apple Inc. All rights reserved.
+                </div>
+                <div class="footer-links-terms col-sm-12 order-3 col-lg-6 order-lg-2">
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="#">Sales and Refunds</a></li>
+                        <li><a href="#">Legal</a></li>
+                        <li><a href="#">Site Map</a></li>
+                    </ul>
+                </div>
+                <div class="footer-country col-sm-12 order-1 col-md-4 order-md-2 text-md-right col-lg-2 order-lg-3">
+                    <div class="flag-wrapper"><img src="images/icons/16.png" /></div>
+                    <div class="footer-country-name">United States</div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
