--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Apple</title>
 </head>
 
 <body>
@@ -24,10 +25,10 @@
                     <li><a href="#">Watch</a></li>
                     <li><a href="#">Vision</a></li>
                     <li><a href="#">AirPods</a></li>
-                    <li><a href="#">TV & Home</a></li>
                     <li><a href="#">Entertainment</a></li>
                     <li><a href="#">Accessories</a></li>
                     <li><a href="#">Support</a></li>
+                    <li><a href="auth/index.html">Login</a></li>
                 </ul>
                 <div class="hamburger">
                     <li><a href="#" class="icon search"><i class='bx bx-search navIcons'></i></a></li>
@@ -197,7 +198,7 @@
 
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="footer_container">
             <div class="upper-text-container">
                 <p>
                     1. Trade In: Trade‑in values vary. iPhone 11 and iPhone 11 Pro
