Feat: login form

--- a/auth/index.html
+++ b/auth/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Apple - Login</title>
 </head>
 <body>
-    
+    <div class="login-container">
+        <h1>Sign In</h1>
+        <input type="text" id="username" placeholder="Username">
+        <input type="password" id="password" placeholder="Password">
+        <button id="loginButton">Log In</button>
+        <a href="../index.html"><button>Go back!</button></a>
+        <p class="info">Username : <span>mor_2314</span></p>
+        <p class="info">Password : <span>83r5^_</span></p>
+        <div class="message" id="message"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
