Feat: Login & logout functionality

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#">Entertainment</a></li>
                     <li><a href="#">Accessories</a></li>
                     <li><a href="#">Support</a></li>
-                    <li><a href="auth/index.html">Login</a></li>
+                    <li><a id="authLink" href="auth/index.html">Login</a></li>
                 </ul>
                 <div class="hamburger">
                     <li><a href="#" class="icon search"><i class='bx bx-search navIcons'></i></a></li>
