--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
             </div>
             <div class="copyright-wrapper row">
                 <div class="copyright col-sm-12 order-2 col-md-8 order-md-1 col-lg-4 order-lg-1">
-                    Copyright &copy; 2020 Apple Inc. All rights reserved.
-                </div>
+                    Copyright &copy; <span id="currentYear"></span> Apple Inc. All rights reserved.
+                </div>                
                 <div class="footer-links-terms col-sm-12 order-3 col-lg-6 order-lg-2">
                     <ul>
                         <li><a href="#">Privacy Policy</a></li>
@@ -343,7 +343,7 @@
                     </ul>
                 </div>
                 <div class="footer-country col-sm-12 order-1 col-md-4 order-md-2 text-md-right col-lg-2 order-lg-3">
-                    <div class="flag-wrapper"><img src="images/icons/16.png" /></div>
+                    <div class="flag-wrapper"><img src="assets/16.png" /></div>
                     <div class="footer-country-name">United States</div>
                 </div>
             </div>
