--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#">Entertainment</a></li>
                     <li><a href="#">Accessories</a></li>
                     <li><a href="#">Support</a></li>
-                    <li><a id="authLink" href="auth/index.html">Login</a></li>
+                    <li class="auth"><a id="authLink" href="auth/index.html">Login</a><i class='bx bx-user'></i></li>
                 </ul>
                 <div class="hamburger">
                     <li><a href="#" class="icon search"><i class='bx bx-search navIcons'></i></a></li>
@@ -145,7 +145,6 @@
                 </div>
             </div>
         </section>
-
         <section class="swiper-container">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
@@ -180,22 +179,14 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
-
-        <section>
+        <section class="slider-two">
             <div class="slider-container">
-                <div class="slider">
-                    <img src="assets/Slider 2/1.jpg" class="slider-item" alt="Image 1">
-                    <img src="assets/Slider 2/2.jpg" class="slider-item" alt="Image 2">
-                    <img src="assets/Slider 2/3.jpg" class="slider-item" alt="Image 3">
-                    <img src="assets/Slider 2/4.jpg" class="slider-item" alt="Image 4">
-                </div>
+                <div class="slider" id="slider"></div>
                 <button class="play-btn" id="playButton">
                     <span id="playIcon">▶</span>
                 </button>
             </div>
-
-        </section>
-
+        </section>        
     </main>
     <footer class="footer">
         <div class="footer_container">
@@ -349,7 +340,6 @@
             </div>
         </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
